<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="item"
            type="com.example.coppeltest.data.SuperHeroForId" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="@color/gray"
            android:clipToPadding="false"
            app:cardCornerRadius="10dp"
            app:cardElevation="1dp"
            app:cardUseCompatPadding="false"
            >

            <LinearLayout
                android:id="@+id/expanded_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                >

                <TextView
                    android:id="@+id/categoryPower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/category_powerstat"
                    android:textSize="25sp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toTopOf="@id/container2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="1" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/categoryPower"
                    app:layout_constraintBottom_toTopOf="@id/container2">

                    <TextView
                        android:id="@+id/tvIntelligence"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:text="@{@string/intelligence(item.powerstats.intelligence)}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tvStrength"
                        />

                    <TextView
                        android:id="@+id/tvStrength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:text="@{@string/strength(item.powerstats.strength)}"
                        app:layout_constraintStart_toEndOf="@id/tvIntelligence"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tvSpeed"/>

                    <TextView
                        android:id="@+id/tvSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:text="@{@string/speed(item.powerstats.speed)}"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tvStrength"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/container1"
                    app:layout_constraintBottom_toTopOf="@id/categoryBiography"
                    >

                    <TextView
                        android:id="@+id/tvDurability"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:text="@{@string/durability(item.powerstats.durability)}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tvPower"/>

                    <TextView
                        android:id="@+id/tvPower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:text="@{@string/power(item.powerstats.power)}"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tvDurability"
                        app:layout_constraintEnd_toStartOf="@id/tvCombat"/>

                    <TextView
                        android:id="@+id/tvCombat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:text="@{@string/combat(item.powerstats.combat)}"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tvPower"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/categoryBiography"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/category_biography"
                    android:textSize="25sp"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/tvFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@{@string/full_name(item.biography.fullName)}"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvAlterEgo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@{@string/alter_ego(item.biography.alterEgos)}"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvAlias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@{@string/aliases(item.biography.aliases)}"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvPlaceOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@{@string/place_of_birth(item.biography.placeOfBirth)}"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvFirstAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@{@string/first_appearance(item.biography.firstAppearance)}"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvPublisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@{@string/publisher(item.biography.publisher)}"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvAlignment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@{@string/alignment(item.biography.alignment)}"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/categoryAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/category_appearance"
                    android:textSize="25sp"
                    android:gravity="center"
                    app:layout_constrainedWidth="true"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@id/categoryAppearance"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/container4">

                    <TextView
                        android:id="@+id/tvGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="@color/black"
                        android:text="@{@string/gender(item.appearance.gender)}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tvRace"/>

                    <TextView
                        android:id="@+id/tvRace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="@color/black"
                        android:text="@{@string/race(item.appearance.race)}"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tvGender"
                        app:layout_constraintEnd_toStartOf="@id/tvHeight"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <TextView
                        android:id="@+id/tvHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="@color/black"
                        android:text="@{@string/height(item.appearance.height)}"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tvRace"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/container3"
                    app:layout_constraintBottom_toTopOf="@id/tvHairColor">

                    <TextView
                        android:id="@+id/tvWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="@color/black"
                        android:text="@{@string/weight(item.appearance.weight)}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tvEyeColor"/>

                    <TextView
                        android:id="@+id/tvEyeColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="@color/black"
                        android:text="@{@string/eye_color(item.appearance.eyeColor)}"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tvWeight"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tvHairColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@{@string/hair_color(item.appearance.hairColor)}"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/categoryWork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/category_work"
                    android:textSize="25sp"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/tvOccupation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@{@string/occupation(item.work.occupation)}"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:id="@+id/tvBase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@{@string/base(item.work.base)}"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/categoryConnections"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/category_connections"
                    android:textSize="25sp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tvGroupAffiliation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@{@string/group_affiliation(item.connections.groupAffiliation)}"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tvRelatives"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@{@string/relatives(item.connections.relatives)}"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>